Adaptar procés d'importació de les Oficines #19